...
                          width: 100,
                          height: 100,
                        ),
                      ),
                      SizedBox(height: 10),
                      Text(
                        'Olá, ${militarUsuario?.cargo ?? '---'} ${militarUsuario?.nomeDeGuerra ?? ''}',
                        style: TextStyle(color: Colors.white, fontWeight: FontWeight.w600, fontSize: 16),
                      ),
                      
                    ],
                  ),
                ),Padding(
...
